--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="author" content="Sergey Zverev">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="/favicon.ico" />
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
